# fork-in-lsp

./: CMakeLists.txt  README.md  TokenizeRunner.cpp  TokenizeRunner.h  main.cpp  test.sh
LSCommunicator/: CMakeLists.txt  Makefile
Tokenizer/: CMakeLists.txt  Tokenizer.cpp  Tokenizer.h
lib/LSCommunicator/: LSCommunicator.cpp  LSCommunicator.h  cmake_install.cmake
lib/Tokenizer/: Makefile  cmake_install.cmake
